--- a/Setup/Applications/lab-k8s-application/Environments/lab-k8s-prod/Infrastructure Definitions/lab-k8s-prometheus.yaml
+++ b/Setup/Applications/lab-k8s-application/Environments/lab-k8s-prod/Infrastructure Definitions/lab-k8s-prometheus.yaml
@@ -5,5 +5,5 @@ deploymentType: KUBERNETES
 infrastructure:
 - type: DIRECT_KUBERNETES
   cloudProviderName: lab-k8s-cluster
-  namespace: prometheus
+  namespace: prometheus2
   releaseName: release-${infra.kubernetes.infraId}
